# 2024-cpl-coding-for-docs

./: CMakeLists.txt  README.md
0-intro/: guess.c  hello.c
1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  sphere.c
