add_executable(circle circle.c)
add_executable(sphere sphere.c)
target_link_libraries(sphere m)
add_executable(mol mol.c)

add_executable(admin admin.c)
add_executable(admin-scanf admin-scanf.c)

add_executable(printf-ub printf-ub.c)
add_executable(scanf-ub scanf-ub.c)

add_executable(scanf-c17-ex2 scanf-c17-ex2.c)
add_executable(scanf-c17-ex3 scanf-c17-ex3.c)